syntax = "proto3";

service Auth {
  rpc Create (CreateRequest) returns (CreateResponse){}
  rpc Read (ReadRequest) returns (ReadResponse) {}
}

message User {
  int32 id = 1;
  string stdno = 2;
  string realname = 3;
  string grade = 4;
  string college = 5;
}

message CreateRequest {
  string stdno = 1;
  string password = 2;
  string realname = 3;
  string grade = 4;
  string college = 5;
}

message CreateResponse {
  int32 id = 1;
}

message ReadRequest {
  string stdno = 1;
}

message ReadResponse {
  User user = 1;
}